# directx-renderer

./: .gitignore  CMakeLists.txt  README.md  build.sh
assets/shaders/: compile.sh  pixel.hlsl  vertex.hlsl
src/: main.cpp
src/app/: application.cpp  application.h
src/core/: Win32Window.cpp  Win32Window.h  application.cpp  application.h  application_interface.cpp  application_interface.h  pch.h  window.cpp  window.h  window_manager.cpp  window_manger.h
src/core/pch/: pch.h
src/engine/: command_allocator.cpp  command_allocator.h  command_list.cpp  command_list.h  command_queue.cpp  command_queue.h  descriptor_heap.cpp  descriptor_heap.h  device.cpp  device.h  engine.cpp  engine.h  fence.cpp  fence.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h
src/engine/buffer/: constant.cpp  constant.h  index.cpp  index.h  vertex.cpp  vertex.h
src/engine/scene/: camera.cpp  camera.h
src/utils/: engine_interface.cpp  engine_interface.h  event_interface.h  events.h  frame_timer.cpp  frame_timer.h  helper.h  key_codes.h  logger.cpp  logger.h  pch.h
